Upload files of Footer Component

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -2,3 +2,10 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.light-blue{
+    color: #0fffc6;
+}
+.v-middle {
+    vertical-align: middle;
+}
