--- a/frontend/src/app/components/template/footer/footer.component.css
+++ b/frontend/src/app/components/template/footer/footer.component.css
@@ -4,8 +4,8 @@
     bottom: 0;
     color:white;
     width: 100%;   
-    height: 25px;
-    padding: 5px;
+    height: 35px;
+    padding: 10px;
 
 
     display: flex;
@@ -14,4 +14,5 @@
 
 .footer span {
     margin-right: 20px;
+    font-size: .8rem;
 }
