Update files for home page

--- a/frontend/src/app/components/template/nav/nav.component.html
+++ b/frontend/src/app/components/template/nav/nav.component.html
@@ -17,6 +17,6 @@
         </mat-nav-list>
     </mat-sidenav>
     <mat-sidenav-content class="content">
-        <router-outlet></router-outlet>
+       <app-home></app-home>
     </mat-sidenav-content>
 </mat-sidenav-container>
