--- a/frontend/src/app/components/template/header/header.component.html
+++ b/frontend/src/app/components/template/header/header.component.html
@@ -9,7 +9,7 @@
             <i class="material-icons">
                 home
             </i>
-            &nbsp;Aplicação CRUD
+            &nbsp;Início
         </a>
     </span>
 </mat-toolbar>
