applying attribute and structural directives

--- a/frontend/src/app/components/template/footer/footer.component.html
+++ b/frontend/src/app/components/template/footer/footer.component.html
@@ -1,7 +1,8 @@
 <mat-toolbar class="footer">
     <span>
         Desenvolvido com 
-        <i class="material-icons light-blue v-middle">favorite</i>
+        <!-- Aplicando a diretiva red usando appRed -->
+        <i class="material-icons v-middle" appRed>favorite</i>
         por 
         <strong>
             OMN 
@@ -9,5 +10,5 @@
                     Web
                 </span>
         </strong>
-    </span>
+    </span>    
 </mat-toolbar>
