Upload method of to create product

--- a/frontend/src/app/components/product/product-create/product-create.component.html
+++ b/frontend/src/app/components/product/product-create/product-create.component.html
@@ -1,1 +1,8 @@
 <p>product-create works!</p>
+
+<button mat-raised-button (click)="createProduct()">
+    Salvar <i class="material-icons v-middle" appRed>save</i> 
+</button>
+<button mat-raised-button (click)="cancel()">
+    Cancelar <i class="material-icons v-middle" appRed>cancel</i> 
+</button>
