--- a/frontend/src/app/views/product-crud/product-crud.component.html
+++ b/frontend/src/app/views/product-crud/product-crud.component.html
@@ -1,1 +1,3 @@
-<p>product-crud works!</p>
+<button mat-raised-button (click)="navigateToProductCreate()">
+    Produto <i class="material-icons v-middle" appRed>add_box</i> 
+</button>
