--- a/frontend/src/app/components/product/product-create/product-create.component.html
+++ b/frontend/src/app/components/product/product-create/product-create.component.html
@@ -1,8 +1,18 @@
-<p>product-create works!</p>
+<mat-card>
+    <mat-card-title>Adicionar Produto</mat-card-title>
+    <form action="">
+        <mat-form-field>
+            <input type="text" matInput placeholder="Nome" name="name" [(ngModel)]="product.name">
+        </mat-form-field>
+        <mat-form-field>
+            <input type="text" matInput placeholder="Preço (R$)" name="price" [(ngModel)]="product.price">
+        </mat-form-field>
+    </form>
+    <button mat-raised-button (click)="createProduct()">
+        Salvar <i class="material-icons v-middle" appRed>save</i> 
+    </button>
+    <button mat-raised-button (click)="cancel()">
+        Cancelar <i class="material-icons v-middle" color="deep-orange" appRed>cancel</i> 
+    </button>
+</mat-card>
 
-<button mat-raised-button (click)="createProduct()">
-    Salvar <i class="material-icons v-middle" appRed>save</i> 
-</button>
-<button mat-raised-button (click)="cancel()">
-    Cancelar <i class="material-icons v-middle" appRed>cancel</i> 
-</button>
