--- a/frontend/src/app/components/template/footer/footer.component.css
+++ b/frontend/src/app/components/template/footer/footer.component.css
@@ -1,6 +1,6 @@
 .footer {
     position: fixed;
-    background-color: #212121;
+    background-color: #5c157a;
     bottom: 0;
     color:white;
     width: 100%;   
