--- a/frontend/src/app/components/template/header/header.component.html
+++ b/frontend/src/app/components/template/header/header.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar class="header mat-elevation-z">
+<mat-toolbar class="header mat-elevation-z" color="primary">
     <span>
         <a href="#">
             <img class="logo" src="../../../../assets/imgs/logo-omn-light-blue.svg" alt="Logo">
