--- a/frontend/src/app/views/product-crud/product-crud.component.html
+++ b/frontend/src/app/views/product-crud/product-crud.component.html
@@ -1,3 +1,5 @@
-<button mat-raised-button (click)="navigateToProductCreate()">
+<button mat-raised-button (click)="navigateToProductCreate()" color="primary">
     Produto <i class="material-icons v-middle" appRed>add_box</i> 
 </button>
+
+<app-product-read></app-product-read>
