--- a/frontend/src/app/components/product/product-read/product-read.component.html
+++ b/frontend/src/app/components/product/product-read/product-read.component.html
@@ -17,6 +17,15 @@
         <th mat-header-cell *matHeaderCellDef >Preço</th>
         <td mat-cell *matCellDef="let row">{{row.price | currency: 'BRL' }}</td>
       </ng-container>
+
+      <!-- Action Column -->
+      <ng-container matColumnDef="action">
+        <th mat-header-cell *matHeaderCellDef >Ações</th>
+        <td mat-cell *matCellDef="let row">
+           <a routerLink="" class="edit"><i class="material-icons light-blue">edit</i></a>
+           <a routerLink=""><i class="material-icons light-blue">delete</i></a>
+        </td>
+      </ng-container>
   
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
