Creation and implementation of product-update component logic

--- a/frontend/src/app/components/product/product-read/product-read.component.html
+++ b/frontend/src/app/components/product/product-read/product-read.component.html
@@ -22,7 +22,7 @@
       <ng-container matColumnDef="action">
         <th mat-header-cell *matHeaderCellDef >Ações</th>
         <td mat-cell *matCellDef="let row">
-           <a routerLink="" class="edit"><i class="material-icons light-blue">edit</i></a>
+           <a routerLink="/products/update/{{row.id}}" class="edit"><i class="material-icons light-blue">edit</i></a>
            <a routerLink=""><i class="material-icons light-blue">delete</i></a>
         </td>
       </ng-container>
