Up delete method

--- a/frontend/src/app/components/product/product-update/product-update.component.html
+++ b/frontend/src/app/components/product/product-update/product-update.component.html
@@ -9,7 +9,7 @@
         </mat-form-field>
     </form>
     <button mat-raised-button (click)="updateProduct()" color="primary">
-        Salvar <i class="material-icons v-middle" appRed>save</i> 
+        Alterar <i class="material-icons v-middle" appRed>refresh</i> 
     </button>
     <button mat-raised-button (click)="cancel()" color="primary">
         Cancelar <i class="material-icons v-middle" color="deep-orange" appRed>cancel</i> 
