Upload logic files of delete-component

--- a/frontend/src/app/components/template/header/header.component.html
+++ b/frontend/src/app/components/template/header/header.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar class="header mat-elevation-z" color="primary">
     <span>
         <a href="#">
-            <img class="logo" src="../../../../assets/imgs/logo-omn-light-blue.svg" alt="Logo">
+            <img class="logo" src="../../../../assets/imgs/logo-omn-facebook.png" alt="Logo">
         </a>
     </span>
     <span class="title-group">
