--- a/frontend/src/app/components/product/product-read/product-read.component.html
+++ b/frontend/src/app/components/product/product-read/product-read.component.html
@@ -23,7 +23,7 @@
         <th mat-header-cell *matHeaderCellDef >Ações</th>
         <td mat-cell *matCellDef="let row">
            <a routerLink="/products/update/{{row.id}}" class="edit"><i class="material-icons light-blue">edit</i></a>
-           <a routerLink=""><i class="material-icons light-blue">delete</i></a>
+           <a routerLink="/products/delete/{{row.id}}"><i class="material-icons light-blue">delete</i></a>
         </td>
       </ng-container>
   
