--- a/frontend/src/app/components/template/header/header.component.html
+++ b/frontend/src/app/components/template/header/header.component.html
@@ -5,11 +5,11 @@
         </a>
     </span>
     <span class="title-group">
-        <a href="#">
+        <a routerLink="{{ routeUrl }}">
             <i class="material-icons">
-                home
+                {{icon}}
             </i>
-            &nbsp;Início
+            &nbsp;{{title}}
         </a>
     </span>
 </mat-toolbar>
